BOCM-425: fix questionnaire table cell alignment

--- a/apps/web/src/styles/7-components/_table.scss
+++ b/apps/web/src/styles/7-components/_table.scss
@@ -30,4 +30,15 @@
       width: 330px;
     }
   }
+
+  &--questionnaire {
+    table-layout: fixed;
+    
+    tbody tr th {
+      width: 330px;
+    }
+    tbody tr td:last-child {
+      width: 400px;
+    }
+  }
 }
